code cleanup + dropdown height css bugfix problem was with calc function returning wrong height so i added 25px to total calc sum

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,15 @@
 /* Global css */
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+}
 
+* {
+  box-sizing: border-box;
+}
 :root {
   /* color pallete*/
   --main: #e9eafb;
@@ -15,6 +25,49 @@
   --border-radius: 8px;
   --speed: 500ms;
 }
+/* GRID CSS */
+.container {
+  --bgMain: #f3f3f2;
+  background: var(--bgMain);
+  min-height: 100vh;
+  display: flex;
+  /* comment foe job_box 3 column grid */
+  flex-direction: column;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  align-items: center;
+
+  /* Background image css */
+  background-image: radial-gradient(#ddd 1.7px, transparent 0), radial-gradient(#ddd 1.5px, transparent 0);
+  background-position: 0 0, 25px, 25px;
+  background-attachment: fixed;
+  background-size: 50px 50px;
+  overflow-x: hidden;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 70%;
+}
+
+/* .column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.double_column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 2;
+} */
+
+/* GRID CSS ENDS */
+
 /* Dropdown CSS*/
 ul {
   list-style: none;
@@ -91,7 +144,6 @@ a {
   border-radius: var(--border-radius);
   transition: background var(--speed);
   padding: 0.5rem;
-  padding-bottom: 25px;
 }
 .menu-item:hover {
   background-color: #525357;
@@ -130,45 +182,6 @@ a {
   transition: all var(--speed) ease;
 }
 /* Dropdown CSS ends*/
-.container {
-  --bgMain: #f3f3f2;
-  background: var(--bgMain);
-  /* min-height: 100vh; */
-  display: flex;
-  /* comment foe job_box 3 column grid */
-  flex-direction: column;
-  flex-wrap: wrap;
-  /* justify-content: space-between; */
-  align-items: center;
-
-  /* Background image css*/
-  background-image: radial-gradient(#ddd 1.7px, transparent 0), radial-gradient(#ddd 1.5px, transparent 0);
-  background-position: 0 0, 25px, 25px;
-  background-attachment: fixed;
-  background-size: 50px 50px;
-  overflow-x: hidden;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 70%;
-}
-
-/* .column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-.double_column {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 2;
-} */
 
 /* TODO :
 1 add media qury for mobile 
